--- a/eda.ipynb
+++ b/eda.ipynb
@@ -20,8 +20,8 @@
     "Sistema de recomendación para libros utilizando el siguiente dataset:\n",
     "\n",
     "- Books.csv – Datos de 270k libros\n",
-    "- Users.csv – Datos de usuario (id, loca:on, age) (57k usuarios)\n",
-    "- Ratings.csv – Ra:ng 0-10 dado por un usuario a un libro determinado. (340k ra:ngs)\n",
+    "- Users.csv – Datos de usuario (id, location, age) (57k usuarios)\n",
+    "- Ratings.csv – Rating 0-10 dado por un usuario a un libro determinado. (340k ratings)\n",
     "\n",
     "----------------"
    ]
