--- a/eda.ipynb
+++ b/eda.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,9 +108,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número de Libros:  271360\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -239,7 +246,7 @@
        "4  http://images.amazon.com/images/P/0393045218.0...  "
       ]
      },
-     "execution_count": 263,
+     "execution_count": 301,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,13 +257,15 @@
     "df_books['ISBN'] = pd.to_numeric(df_books['ISBN'], errors='coerce')\n",
     "df_books['Year-Of-Publication'] = pd.to_numeric(df_books['Year-Of-Publication'], errors='coerce')\n",
     "\n",
+    "print(\"Número de Libros: \", df_books.shape[0])\n",
+    "\n",
     "# Primeras 5 filas de df_books\n",
     "df_books.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,9 +284,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número de Usuarios:  278858\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -348,7 +364,7 @@
        "4        5  farnborough, hants, united kingdom   NaN"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 303,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,6 +373,8 @@
     "# Convertir variables a tipo numérico\n",
     "df_users['Age'] = pd.to_numeric(df_users['Age'], errors='coerce')\n",
     "df_users[\"User-ID\"] = pd.to_numeric(df_users[\"User-ID\"], errors='coerce')\n",
+    "\n",
+    "print(\"Número de Usuarios: \", df_users.shape[0])\n",
     "\n",
     "# Primeras 5 filas de df_users\n",
     "df_users.head()"
@@ -373,9 +391,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número de Calificaciones:  1149780\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -446,7 +471,7 @@
        "4   276729  521795028.00            6"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 304,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,6 +482,8 @@
     "df_ratings['User-ID'] = pd.to_numeric(df_ratings['User-ID'], errors='coerce')\n",
     "df_ratings['ISBN'] = pd.to_numeric(df_ratings['ISBN'], errors='coerce')\n",
     "df_ratings['Book-Rating'] = pd.to_numeric(df_ratings['Book-Rating'], errors='coerce')\n",
+    "\n",
+    "print(\"Número de Calificaciones: \", df_ratings.shape[0])\n",
     "\n",
     "# Primeras 5 filas de df_ratings\n",
     "df_ratings.head()"
