--- a/eda.ipynb
+++ b/eda.ipynb
@@ -1779,6 +1779,7 @@
     "final_ratings = final_ratings[final_ratings['Age'] < 100]\n",
     "final_ratings = final_ratings[final_ratings['Age'] > 5]\n",
     "final_ratings = final_ratings[final_ratings['Year-Of-Publication'] > 1300]\n",
+    "final_ratings = final_ratings[final_ratings['Year-Of-Publication'] < 2024]\n",
     "\n",
     "final_ratings.head()"
    ]
