--- a/filtro_colaborativo.ipynb
+++ b/filtro_colaborativo.ipynb
@@ -249,6 +249,7 @@
     "\n",
     "model2.add(Dense(128, input_shape=(X_train.shape[1],)))\n",
     "model2.add(Activation('relu'))\n",
+    "model2.add(Dropout(0.2))\n",
     "\n",
     "model2.add(Dense(64))\n",
     "model2.add(Activation('relu'))\n",
