--- a/filtro_colaborativo.ipynb
+++ b/filtro_colaborativo.ipynb
@@ -14,7 +14,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En esta práctica se diseñó una red neuronal para la predicción de ratings de películas, basado en el filtro colaborativo. Dicha red recibe el ID de un usuario y el ISBN de una película, y el grupo de usuario al que pertenece, y devuelve un rating estimado para dicha película.\n",
+    "En esta práctica se diseñó una red neuronal para un sistema de recomendación basado en filtro colaborativo. Para ello se utilizó la librería de Python [Keras](https://keras.io/), la cual permite crear redes neuronales de manera sencilla.\n",
+    "\n",
+    "Dicha red recibe un número de grupo (al que pertenece el usuario) e información sobre un libro. A partir de esto, la red debe predecir la calificación que el usuario le daría al libro. Dependiendo de la calificación, se recomienda o no el libro al usuario.\n",
     "\n",
     "A continuación se muestra el código utilizado para la creación de la Red Neuronal, así como los resultados obtenidos.\n",
     "\n",
@@ -234,9 +236,11 @@
    "source": [
     "##### *Diseño de Red Neuronal*\n",
     "\n",
-    "Posteriormente, se diseñó la red neuronal. Esta recibe como entrada el ID de un usuario, el ISBN de una película, y el grupo de usuario al que pertenece, y devuelve un rating estimado para dicha película.\n",
+    "Posteriormente, se diseñó la red neuronal. Esta recibe como entrada el grupo al que pertenece el usuario y la información del libro. La salida de la red es la calificación que el usuario le daría al libro. \n",
     "\n",
-    "Esta red permite un Sistema de Recomendación basado en Filtro Colaborativo, ya que permite predecir el rating que un usuario le daría a una película, basado en los ratings que otros usuarios le han dado a dicha película y sus similitudes con el usuario en cuestión."
+    "Esta red permite un Sistema de Recomendación basado en Filtro Colaborativo, ya que permite predecir el rating que un usuario le daría a una película, basado en los ratings que otros usuarios le han dado a dicha película y sus similitudes con el usuario en cuestión.\n",
+    "\n",
+    "Dependiendo de la calificación que la red prediga, se recomienda o no el libro al usuario."
    ]
   },
   {
