--- a/basado_contenido.ipynb
+++ b/basado_contenido.ipynb
@@ -387,7 +387,7 @@
       "ISBN: 375707425\n",
       "Edición: 2002\n",
       "\n",
-      "Creemos que SÍ te gustará este libro, según gustos de personas con gustos similares a los tuyos\n"
+      "Creemos que SÍ te gustará este libro, según tus gustos y libros similares que te han gustado\n"
      ]
     }
    ],
@@ -419,9 +419,9 @@
     "    print(f\"Edición: {year}\")\n",
     "\n",
     "    if y_pred > 0.5:\n",
-    "        print(\"\\nCreemos que SÍ te gustará este libro, según gustos de personas con gustos similares a los tuyos\")\n",
+    "        print(\"\\nCreemos que SÍ te gustará este libro, según tus gustos y libros similares que te han gustado\")\n",
     "    else:\n",
-    "        print(\"\\nCreemos que NO te gustará este libro, según gustos de personas con gustos similares a los tuyos\")\n",
+    "        print(\"\\nCreemos que NO te gustará este libro, según tus gustos y libros similares que te han gustado\")\n",
     "\n",
     "\n",
     "prueba()"
@@ -445,7 +445,7 @@
       "ISBN: 671004530\n",
       "Edición: 2002\n",
       "\n",
-      "Creemos que SÍ te gustará este libro, según gustos de personas con gustos similares a los tuyos\n"
+      "Creemos que SÍ te gustará este libro, según tus gustos y libros similares que te han gustado\n"
      ]
     }
    ],
